- fixed checkbox alignment

--- a/skin/frontend/gs-default/default/css/adjnav.css
+++ b/skin/frontend/gs-default/default/css/adjnav.css
@@ -19,7 +19,8 @@ div.narrow-by a.adj-nav-price {}
 div.narrow-by a.adj-nav-price-selected {font-weight: bold}
 
 /*attributes*/
-div.narrow-by a.adj-nav-attribute { padding-left:15px; background:transparent url(../images/adj-nav-checkbox.gif) no-repeat scroll -70px 3px; color: #606163;}
+/*div.narrow-by a.adj-nav-attribute { padding-left:15px; background:transparent url(../images/adj-nav-checkbox.gif) no-repeat scroll -70px 3px; color: #606163;}*/
+div.narrow-by a.adj-nav-attribute { padding-left:15px;padding-top:2px; background:transparent url(../images/adj-nav-checkbox.gif) no-repeat scroll -70px 3px; color: #606163;}
 div.narrow-by a.adj-nav-attribute-selected {padding-left:15px; background-position: -50px -17px; }
 div.narrow-by a.adj-nav-icon {padding:0px 0px 5px 0px;}
 div.narrow-by a.adj-nav-icon-selected {opacity:0.5}
